# aoc2020

./: aoc.cabal
app/: Main.hs
src/: Aoc.hs
