cabal-version:       2.4
name:                aoc
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/imgulyas/aoc
bug-reports:         https://github.com/imgulyas/aoc/issues
license:             MIT
license-file:        LICENSE
author:              Imre Gulyas
maintainer:          Imre Gulyas <imgulyas@gmail.com>
copyright:           2020 Imre Gulyas
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/imgulyas/aoc.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , text
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude, Relude.Extra.Map)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Aoc
  default-extensions:  OverloadedStrings
  build-depends:       parsec
                     , relude


executable aoc
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aoc
                     , relude
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
